# EE6470-Implement-of-Many-Core-System-Homework-5

./: README.md  report.md
non-split/: CMakeLists.txt  Compile_def.h  Filter.cpp  Filter.h  System.cpp  System.h  Testbench.cpp  Testbench.h
non-split/stratus/: Makefile.prj
split/: Filter.cpp  Filter.h  System.cpp  System.h  Testbench.cpp  Testbench.h  main.cpp
split/stratus/: Makefile.prj  project.tcl
